typebot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: typebot-service
spec:
  selector:
    app.kubernetes.io/name: typebot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
